# carenav-ag-ui

./: package-lock.json  pnpm-lock.yaml
data/csv_data/: demographics.csv
server/python/: api_server.py  mcp_server.py  pyproject.toml
server/python/example_server/: __init__.py
typescript-sdk/: pnpm-lock.yaml
typescript-sdk/apps/dojo/: package.json
typescript-sdk/apps/dojo/src/: agents.ts  menu.ts
typescript-sdk/apps/dojo/src/app/: layout.tsx  page.tsx
typescript-sdk/apps/dojo/src/app/[integrationId]/feature/agentic_chat/: layout.tsx  page.tsx
typescript-sdk/apps/dojo/src/components/sidebar/: sidebar.tsx
typescript-sdk/apps/dojo/src/context/: MemberInfoContext.tsx
typescript-sdk/integrations/openai-server/: package.json
typescript-sdk/integrations/openai-server/server/python/example_server/: __init__.py
typescript-sdk/integrations/openai-server/src/: index.ts
